[package]
name = "ntpy"
version = "0.1.0"
authors = ["treemcgee42 <varun.malladi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
handlebars = "4.1.2"
serde_json = "1.0.67"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["handlebars"]

[dependencies.rusqlite]
version = "0.25.3"
features = ["bundled"]
